[gd_scene load_steps=4 format=3 uid="uid://c23g57q8jgjsd"]

[ext_resource type="Script" uid="uid://maig4fohrflj" path="res://Scripts/MainMenu.gd" id="1_8saeu"]
[ext_resource type="Texture2D" uid="uid://b8v8ep35igecp" path="res://Art/MainMenu.png" id="1_tt5f1"]
[ext_resource type="FontFile" uid="uid://82qj0rpumxrm" path="res://Art/04B_08__.TTF" id="2_853f1"]

[node name="MainMenu" type="Node2D"]

[node name="MainMenu" type="Sprite2D" parent="."]
position = Vector2(320, 180)
scale = Vector2(2, 2)
texture = ExtResource("1_tt5f1")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_8saeu")

[node name="CanvasLayer" type="CanvasLayer" parent="Control"]

[node name="Player1" type="Panel" parent="Control/CanvasLayer"]
offset_right = 220.0
offset_bottom = 250.0

[node name="Player1ScoreLabel" type="Label" parent="Control/CanvasLayer/Player1"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_top = 20.0
offset_right = 20.0
offset_bottom = 43.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_853f1")
theme_override_font_sizes/font_size = 12

[node name="Player2" type="Panel" parent="Control/CanvasLayer"]
offset_left = 420.0
offset_right = 640.0
offset_bottom = 250.0

[node name="Player2ScoreLabel" type="Label" parent="Control/CanvasLayer/Player2"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_top = 20.0
offset_right = 20.0
offset_bottom = 43.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_853f1")
theme_override_font_sizes/font_size = 12

[node name="StartButton" type="Button" parent="Control/CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -48.0
offset_top = -15.5
offset_right = 48.0
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_853f1")
text = "Start Game"

[connection signal="pressed" from="Control/CanvasLayer/StartButton" to="Control" method="_on_start_button_pressed"]
